feat(ui): integrate ui to build system

--- a/.cproject
+++ b/.cproject
@@ -214,4 +214,5 @@
 			<resource resourceType="PROJECT" workspacePath="/WatchCat"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
